# divise

./: .gitignore  pyproject.toml
src/divise/: db.py  main.py
src/divise/core/: models.py
src/divise/os/: win32_provider.py
src/divise/services/: monitor.py  recorder.py
