[project]
name = "divise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HaveSomeRubicon", email = "97649192+HaveSomeRubicon@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
]

[project.scripts]
divise = "divise.main:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
